* Avoid prefiltering in client_api() if the selector contains `:not` and move the `ID optimization LTR` block under the `ID optimization RTL` block. [jddalton]

* Move the client_api() `ID optimization RTL` block into the `reduce selection context` block to reduce tests if Optimize.id isn't matched in the selector. [jddalton]

* Ensure the element returned by gEBID actually has the id in the `reduce selection context` block of client_api(). [jddalton]

* Avoid name.toUpperCase() in getChildIndexesByTag() if possible. [jddalton]

* Remove toLowerCase() call in getAttribute(). [jddalton]

* Cleanup `switch` statements, reduce variable assignments in native_api(), and remove unused parts of ID/TAG optimizations in client_api(). [jddalton]

* Avoid unnecessarily converting the output of byClass() to an array. [jddalton]

* Remove the unused `view` variable and assign `lastContext` a default value of `context`. [jddalton]

* Add the native_api() method to handle simple selectors. [Diego Perini, jddalton]

* Remove the `r` argument from the compiled selectors and make match() support a callback argument. [jddalton]

* Make getChildIndexes() and getChildIndexesByTag() use do-while loops. [jddalton]

* Rename getChildrenIndex() and getChildrenIndexByTag() to getChildIndexes() and getChildIndexesByTag(). [jddalton]

* Rename caching vars `indexesByNodeType` and `indexesByNodeName` to `childIndexes` and `childIndexesByTag`. [jddalton]

* Simplify the `RE_BUGGY_QSAPI` regexp and allow FF to use Array.slice() in concatList(). [jddalton]

* Rename `reSimpleSelector` to `RE_SIMPLE_SELECTOR` and fork to optimize the regexp for IE. [jddalton]

* Remove the `data` argument from NW.Dom.select() because the same functionality can be achieved by the `callback` argument. [jddalton]

* Tweak the `reUnnormalized` regexp and make `RE_BUGGY_MUTATION` match `:disabled` and `:checked`. [jddalton]
